[gd_scene load_steps=3 format=1]

[ext_resource path="res://uitheme.tres" type="Theme" id=1]
[ext_resource path="res://scripts/BossEditor.gd" type="Script" id=2]

[node name="BossEditor" type="Panel"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
theme/theme = ExtResource( 1 )
margin/left = 1.0
margin/top = -1.0
margin/right = 344.0
margin/bottom = 720.0
script/script = ExtResource( 2 )

[node name="Label" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 23.0
margin/right = 341.0
margin/bottom = 47.0
text = "Boss Editor"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Label 2" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 10.0
margin/top = 103.0
margin/right = 91.0
margin/bottom = 127.0
text = "Base size"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Label3" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 10.0
margin/top = 145.0
margin/right = 176.0
margin/bottom = 169.0
text = "Size dropoff"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Label5" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 10.0
margin/top = 234.0
margin/right = 187.0
margin/bottom = 258.0
text = "Base rotation speed"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Label6" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 10.0
margin/top = 275.0
margin/right = 187.0
margin/bottom = 299.0
text = "Rotation increment"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Label7" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 10.0
margin/top = 315.0
margin/right = 187.0
margin/bottom = 339.0
text = "Start color"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Label8" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 10.0
margin/top = 354.0
margin/right = 187.0
margin/bottom = 378.0
text = "End color"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Label9" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 10.0
margin/top = 389.0
margin/right = 187.0
margin/bottom = 413.0
text = "Regex"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Label4" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 10.0
margin/top = 190.0
margin/right = 176.0
margin/bottom = 214.0
text = "Base health"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="BaseSizeField" type="SpinBox" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 232.0
margin/top = 99.0
margin/right = 330.0
margin/bottom = 133.0
range/min = 10.0
range/max = 200.0
range/step = 1.0
range/page = 0.0
range/value = 100.0
range/exp_edit = false
range/rounded = false
editable = true
prefix = ""
suffix = ""

[node name="BaseHealthField" type="SpinBox" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 232.0
margin/top = 185.0
margin/right = 330.0
margin/bottom = 219.0
range/min = 1.0
range/max = 1000.0
range/step = 1.0
range/page = 0.0
range/value = 50.0
range/exp_edit = false
range/rounded = false
editable = true
prefix = ""
suffix = ""

[node name="SideDropoffField" type="SpinBox" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 232.0
margin/top = 142.0
margin/right = 330.0
margin/bottom = 176.0
range/min = 1.0
range/max = 100.0
range/step = 1.0
range/page = 0.0
range/value = 50.0
range/exp_edit = false
range/rounded = false
editable = true
prefix = ""
suffix = "%"

[node name="BaseRotField" type="SpinBox" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 232.0
margin/top = 229.0
margin/right = 330.0
margin/bottom = 263.0
range/min = -5.0
range/max = 5.0
range/step = 0.1
range/page = 0.0
range/value = 0.5
range/exp_edit = false
range/rounded = false
editable = true
prefix = ""
suffix = ""

[node name="RotIncField" type="SpinBox" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 232.0
margin/top = 271.0
margin/right = 330.0
margin/bottom = 305.0
range/min = -0.5
range/max = 0.5
range/step = 0.01
range/page = 0.0
range/value = 0.1
range/exp_edit = false
range/rounded = false
editable = true
prefix = ""
suffix = ""

[node name="StartColorField" type="ColorPickerButton" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 233.0
margin/top = 311.0
margin/right = 313.0
margin/bottom = 341.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
flat = false
color = Color( 0.425529, 0.898438, 0.357971, 1 )
edit_alpha = true

[node name="EndColorField" type="ColorPickerButton" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 233.0
margin/top = 349.0
margin/right = 313.0
margin/bottom = 379.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
flat = false
color = Color( 0.730469, 0.185471, 0.185471, 1 )
edit_alpha = true

[node name="RegexField" type="LineEdit" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 233.0
margin/top = 383.0
margin/right = 327.0
margin/bottom = 417.0
text = ".*"
placeholder/alpha = 0.6
focus_mode = 2
caret/caret_blink = false
caret/caret_blink_speed = 0.65

[node name="FightButton" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 130.0
margin/top = 460.0
margin/right = 189.0
margin/bottom = 490.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Fight!"
flat = false

[connection signal="pressed" from="FightButton" to="." method="_on_FightButton_pressed"]


